--- a/index.html
+++ b/index.html
@@ -87,71 +87,5 @@
       </div>
     </div>
   </main>
-  <h1 id="h1"></h1>
+  <h2 class="mb-5 text-center fw-bold">Welcome to our Online Store</h2>
   
-
-  <!-- Footer -->
-  <footer class="bg-light text-center py-4 mt-5 border-top">
-    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-      <p class="mb-2 mb-md-0 text-muted">&copy; 2024 MyShop. All rights reserved.</p>
-      <div>
-        <a href="#" class="text-muted mx-2"><i class="bi bi-facebook fs-5"></i></a>
-        <a href="#" class="text-muted mx-2"><i class="bi bi-twitter fs-5"></i></a>
-        <a href="#" class="text-muted mx-2"><i class="bi bi-instagram fs-5"></i></a>
-      </div>
-    </div>
-  </footer>
-  <form class="row g-3">
-    <div class="col-md-6">
-      <label for="inputEmail4" class="form-label">Email</label>
-      <input type="email" class="form-control" id="inputEmail4">
-    </div>
-    <div class="col-md-6">
-      <label for="inputPassword4" class="form-label">Password</label>
-      <input type="password" class="form-control" id="inputPassword4">
-    </div>
-    <div class="col-12">
-      <label for="inputAddress" class="form-label">Address</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-    </div>
-    <div class="col-12">
-      <label for="inputAddress2" class="form-label">Address 2</label>
-      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-    </div>
-    <div class="col-md-6">
-      <label for="inputCity" class="form-label">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="col-md-4">
-      <label for="inputState" class="form-label">State</label>
-      <select id="inputState" class="form-select">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="col-md-2">
-      <label for="inputZip" class="form-label">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-    <div class="col-12">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck">
-        <label class="form-check-label" for="gridCheck">
-          Check me out
-        </label>
-      </div>
-    </div>
-    <div class="col-12">
-      <button type="submit" class="btn btn-primary">Sign in</button>
-    </div>
-  </form>
-  <h1 id="hello">lets do</h1>
-  <button id="rr" onclick="fs()">click me</button>
-  
-  
-  <!-- Bootstrap JS Bundle CDN (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Custom JS -->
-  <script src="css/js/index.js"></script>
-</body>
-</html>
